# quince

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  QUINCE_BUGS.md  README.md  REUSE.toml  build_result.txt  sonar-project.properties
.github/workflows/: audit.yml  benchmark.yml  ci.yml  codeql.yml  docs.yml  release.yml  sonar.yml
LICENSES/: AGPL-3.0-only.txt  LicenseRef-Quince-Commercial.txt
book/: book.toml
book/src/: SUMMARY.md
core/: Cargo.toml
core/src/: lib.rs  ring.rs  types.rs
dev/bench/: data.js
docs/: QFL.md  QUINCE.md
engine/: Cargo.toml  intg_fill_handler.qfl
engine/benches/: bench.rs
engine/src/: indicators.rs  lib.rs  loop.rs  orders.rs
engine/tests/: qfl_strategies.rs
exchange/: Cargo.toml
exchange/src/: lib.rs  trait.rs
exchange/src/binance/: mod.rs  public.rs  types.rs  ws.rs
indicators/: Cargo.toml
indicators/benches/: bench.rs
indicators/src/: flow.rs  lib.rs  ma.rs  oscillator.rs  simd.rs  structure.rs  volatility.rs
logger/: Cargo.toml
logger/src/: lib.rs
qfl/: Cargo.toml  hr_type_v1.qfl  hr_type_v2.qfl  ord_5args.qfl  persist_64.qfl  persist_large.qfl  runtime_ind_missing.qfl  runtime_ord_lim.qfl  runtime_pfloat_a.qfl  runtime_price_trade.qfl  runtime_test_ord_sell.qfl  runtime_test_pos_trade.qfl
qfl/benches/: bench.rs
qfl/examples/: tick_hz.rs
qfl/src/: ast.rs  checker.rs  compiler.rs  graph.rs  ir.rs  lexer.rs  lib.rs  log_buffer.rs  opcodes.rs  optimize.rs  parser.rs  profiler.rs  risk.rs  runtime.rs  tracer.rs  types.rs  vm.rs  window.rs
qfl/tests/: debug_hang.rs
quince/: Cargo.toml
quince/src/: lib.rs  main.rs  mock.rs
reference/: indicators.txt
risk/: Cargo.toml
risk/src/: controls.rs  lib.rs
strategies/: atr_trail.qfl  bb_bounce.qfl  ema_cross.lua  ema_cross.qfl  grid_trade.qfl  heavy_test.qfl  macd_cross.qfl  momentum.qfl  rare_signal.qfl  rsi_reversion.qfl  scalper.lua  scalper.qfl  simple_test.qfl  sma_cross.qfl  test_all.lua  test_all.qfl  test_data_passing.qfl
strategy/: Cargo.toml
strategy/src/: lib.rs  runtime.rs
tools/docgen/: Cargo.toml
tools/docgen/src/: extract.rs  main.rs
