[workspace]
members = [
    "core",
    "exchange",
    "engine",
    "risk",
    "logger",
    "quince",
    "indicators",
    "qfl",
]
resolver = "2"

[workspace.package]
version = "0.6.10"
edition = "2021"
license = "GPL-3.0-only"

[workspace.dependencies]
tokio = { version = "1", features = ["rt", "sync", "macros", "time", "net", "signal"] }
futures-util = "0.3"
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
reqwest = { version = "0.12", features = ["rustls-tls", "json"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
async-trait = "0.1"
puffin = "0.20"
puffin_http = "0.17"
simd-json = "0.14"
crossbeam-channel = "0.5"
