[package]
name = "quince-engine"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = ["simd"]
simd = ["quince-indicators/simd"]
profiling = ["puffin", "quince-qfl/profiling"]

[dev-dependencies]
async-trait.workspace = true
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "bench"
harness = false

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
thiserror.workspace = true
tracing.workspace = true
crossbeam-channel.workspace = true
quince-core = { path = "../core" }
quince-exchange = { path = "../exchange" }
quince-qfl = { path = "../qfl" }
quince-risk = { path = "../risk" }
quince-logger = { path = "../logger" }
quince-indicators = { path = "../indicators", default-features = false }
puffin = { workspace = true, optional = true }
