[package]
name = "quince-exchange"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tokio.workspace = true
futures-util.workspace = true
tokio-tungstenite.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
thiserror.workspace = true
tracing.workspace = true
quince-core = { path = "../core" }
async-trait.workspace = true
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
