[package]
name = "quince-indicators"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = ["simd"]
simd = []

[dependencies]
quince-core = { path = "../core" }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "bench"
harness = false
