[package]
name = "quince-qfl"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
quince-core = { path = "../core" }
tracing.workspace = true
crossbeam-channel.workspace = true
thiserror.workspace = true
memmap2 = "0.9"

[dev-dependencies]
chrono.workspace = true
